--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<% if signed_in? %>
+  <%= link_to "Sign out", signout_path, method: "delete" %>
+<% else %>
+  <span>yolo</span>
+<% end %>
 <%= yield %>
 
 </body>
