user authorization for edit and delete

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <% if signed_in? %>
   <%= link_to "Sign out", signout_path, method: "delete" %>
 <% else %>
-  <span>yolo</span>
+  <span>need to sign in</span>
 <% end %>
 <%= yield %>
 
