Added Foundation styles.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,11 @@
         </ul>
       </section>
     </nav>
-    <%= yield %>
+    <div class="row">
+      <div class="six columns centered">
+        <%= yield %>
+      </div>
+    </div>
     <%= javascript_include_tag "application" %>
   </body>
 </html>
