--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -1,11 +1,7 @@
-<h1>Listing sections</h1>
-
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th>Content</th>
       <th>Title</th>
-      <th>User</th>
       <th></th>
       <th></th>
       <th></th>
@@ -15,9 +11,7 @@
   <tbody>
     <% @sections.each do |section| %>
       <tr>
-        <td><%= section.content %></td>
         <td><%= section.title %></td>
-        <td><%= section.user_id %></td>
         <td><%= link_to 'Show', section %></td>
         <td><%= link_to 'Edit', edit_section_path(section) %></td>
         <td><%= link_to 'Destroy', section, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -28,4 +22,4 @@
 
 <br>
 
-<%= link_to 'New Section', new_section_path %>
+<%= link_to 'New Section', new_section_path, class: "btn btn-primary" %>
