--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -12,14 +12,17 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :content %><br>
-    <%= f.text_area :content %>
-  </div>
-  <div class="field">
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
+
+  <div class="field">
+    <%= f.label :content %><br>
+    <%= f.text_area :content %>
+  </div>
+ <br /> 
   <div class="actions">
-    <%= f.submit "Save", class: "button" %>
+    <%= f.submit "Save", class: "btn btn-primary" %>
+    <%= link_to "Cancel", sections_path, class: "btn btn-default" %>
   </div>
 <% end %>
