--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -1,10 +1,8 @@
-<p id="notice"><%= notice %></p>
+<div class="alert alert-success">
+  <p id="notice"><%= notice %></p>
+</div>
+
 <h3><%= @section.title %></h3>
 
-<div class="row">
-  <div class="six columns centered">
-    <div class="panel">
-      <%= @section.content.html_safe %>
-    </div>
-  </div>
+<%= @section.content.html_safe %>
 </div>
