--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -13,8 +13,12 @@
       <tr>
         <td><%= section.title %></td>
         <td><%= link_to 'Show', section %></td>
-        <td><%= link_to 'Edit', edit_section_path(section) %></td>
-        <td><%= link_to 'Destroy', section, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to 'Edit', edit_section_path(section) %>
+        </td>
+        <td>
+          <%= link_to 'Destroy', section, method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
