styled some buttons

--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -12,12 +12,12 @@
     <% @sections.each do |section| %>
       <tr>
         <td><%= section.title %></td>
-        <td><%= link_to 'Show', section %></td>
-        <td>
-          <%= link_to 'Edit', edit_section_path(section) %>
+        <td style="width: 30px;"><%= link_to 'Show', section, class: "btn btn-success" %></td>
+        <td style="width: 30px;">
+          <%= link_to 'Edit', edit_section_path(section), class: "btn btn-info" %>
         </td>
-        <td>
-          <%= link_to 'Destroy', section, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <td style="width: 30px;">
+          <%= link_to 'Destroy', section, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
         </td>
       </tr>
     <% end %>
