--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -5,4 +5,7 @@
 <h3><%= @section.title %></h3>
 
 <%= @section.content.html_safe %>
-</div>
+
+<br />
+
+<%= link_to 'Back', sections_path, class: "btn btn-default" %>
