--- a/app/views/sections/_form.html.erb
+++ b/app/views/sections/_form.html.erb
@@ -24,7 +24,7 @@
   <br /> 
 
   <div class="actions">
-    <%= f.submit "Save", class: "btn btn-primary" %>
+    <%= f.submit "Save", class: "btn btn-default" %>
     <%= link_to "Cancel", sections_path, class: "btn btn-default" %>
   </div>
 <% end %>
