--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -1,3 +1,8 @@
+<div class="panel panel-info">
+  <div class="panel-heading">
+    Section Management
+  </div>
+  <div class="panel-body">
 <table class="table">
   <thead>
     <tr>
@@ -12,12 +17,12 @@
     <% @sections.each do |section| %>
       <tr>
         <td><%= section.title %></td>
-        <td style="width: 30px;"><%= link_to 'Show', section, class: "btn btn-success" %></td>
+        <td style="width: 30px;"><%= link_to '', section, class: "btn btn-default glyphicon glyphicon-eye-open" %></td>
         <td style="width: 30px;">
-          <%= link_to 'Edit', edit_section_path(section), class: "btn btn-info" %>
+          <%= link_to '', edit_section_path(section), class: "btn btn-default glyphicon glyphicon-pencil" %>
         </td>
         <td style="width: 30px;">
-          <%= link_to 'Destroy', section, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+          <%= link_to '', section, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-default glyphicon glyphicon-trash" %>
         </td>
       </tr>
     <% end %>
@@ -26,4 +31,6 @@
 
 <br>
 
-<%= link_to 'New Section', new_section_path, class: "btn btn-primary" %>
+<%= link_to '', new_section_path, class: "btn btn-default glyphicon glyphicon-plus" %>
+</div>
+</div>
