final tidbits for the night.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
       </div>
 
       <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
+      <div>
           <%= yield %>   
       </div> 
     </div> <!-- /container -->
